RESOLVED FIXED71080
printing layout test failures after r98634
https://bugs.webkit.org/show_bug.cgi?id=71080
Summary printing layout test failures after r98634
John Gregg
Reported 2011-10-27 16:37:16 PDT
printing/single-line-must-not-be-split-into-two-pages.html = IMAGE+TEXT printing/setPrinting.html = IMAGE+TEXT
Attachments
Patch (1.82 MB, patch)
2011-10-28 12:13 PDT, Stephen Chenney
no flags
Patch (1.82 MB, patch)
2011-10-28 12:29 PDT, Stephen Chenney
no flags
Patch (1.82 MB, patch)
2011-11-02 06:53 PDT, Stephen Chenney
no flags
Stephen Chenney
Comment 1 2011-10-28 12:01:47 PDT
Patch incoming. I conferred with Elliot Poger about the status of CG and Skia expected results, and think I have it covered now.
Stephen Chenney
Comment 2 2011-10-28 12:13:50 PDT
WebKit Review Bot
Comment 3 2011-10-28 12:16:45 PDT
Attachment 112891 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Tools/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] LayoutTests/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Stephen Chenney
Comment 4 2011-10-28 12:29:47 PDT
Kent Tamura
Comment 5 2011-11-01 19:31:42 PDT
Comment on attachment 112894 [details] Patch rubber-stamped
WebKit Review Bot
Comment 6 2011-11-01 19:34:25 PDT
Comment on attachment 112894 [details] Patch Rejecting attachment 112894 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: tform/chromium-cg-mac/printing/setPrinting-expected.txt patching file LayoutTests/platform/chromium-cg-mac/printing/single-line-must-not-be-split-into-two-pages-expected.txt patching file LayoutTests/platform/chromium/test_expectations.txt Hunk #1 FAILED at 3938. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kent Tamura', u'--force']" exit_code: 1 Full output: http://queues.webkit.org/results/10258137
Stephen Chenney
Comment 7 2011-11-02 06:53:40 PDT
Dimitri Glazkov (Google)
Comment 8 2011-11-02 08:56:05 PDT
Comment on attachment 113312 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=113312&action=review > LayoutTests/platform/chromium-cg-mac/printing/single-line-must-not-be-split-into-two-pages-expected.txt:1 > +layer at (0,0) size 1256x14552 good lord jesus, someone convert this to a dumpAsText!
WebKit Review Bot
Comment 9 2011-11-02 09:15:13 PDT
Comment on attachment 113312 [details] Patch Clearing flags on attachment: 113312 Committed r99066: <http://trac.webkit.org/changeset/99066>
WebKit Review Bot
Comment 10 2011-11-02 09:15:26 PDT
All reviewed patches have been landed. Closing bug.
Andrey Kosyakov
Comment 11 2011-11-02 10:50:31 PDT
This broke the chromium canaries for at least Win Leopard. I'm going to bring back the suppression.
Stephen Chenney
Comment 12 2011-11-02 12:20:56 PDT
I believe that the test failures may be due to issues in compressing or otherwise managing the very large png files that result from this test. As Dimitri notes, there is really no reason for this test to have image comparison at all; text is sufficient to validate the behavior. I'll put together a patch to remove the pngs and use dumpAsText.
Tony Chang
Comment 13 2011-11-02 12:25:54 PDT
(In reply to comment #12) > I'll put together a patch to remove the pngs and use dumpAsText. That would be great. Please open a new bug for this. For reference, http://trac.webkit.org/changeset/99080 added back the failures and http://trac.webkit.org/changeset/99088 landed the new baselines and removed the entries from text_expectations.txt.
Stephen Chenney
Comment 14 2011-11-02 15:17:46 PDT
Reponed to address the remaining failures. As far as I can tell, the following expectation are incorrect at this time: printing/setPrinting.html: Mac 10.5 Skia TEXT - the text expectations were correct before 99088 Mac 10.5 CG IMAGE - the image expectations were correct before 99088 printing/single-line-must-not-be-split-into-two-pages.html: Win (all) TEXT - the text expectations were correct before 99088 Mac 10.5 Skia TEXT - the text expectations were correct before 99088 It may be possible to just roll back the specific files, although it looks like change 99088 alos moved some expectations, which may be the cause of the problems.
Tony Chang
Comment 15 2011-11-02 15:35:53 PDT
I apologize for 99088 landing the wrong results. I think I ran webkit-patch rebaseline-expectations too soon. In http://trac.webkit.org/changeset/99105, I landed the win text expectations for ingle-line-must-not-be-split-into-two-pages.html and added LEOPARD failures for both tests. Once the bots cycle (looks like it takes 3-4 hours for the debug bots), anyone should be able to use webkit-patch to get the new expectations. I'll do it tomorrow if caseq doesn't get to it.
Tony Chang
Comment 16 2011-11-03 11:45:01 PDT
Note You need to log in before you can comment on or make changes to this bug.