printing layout test failures after r98634 https://bugs.webkit.org/show_bug.cgi?id=71080

Tools:

Patch by Stephen Chenney <schenney@chromium.org> on 2011-11-02
Reviewed by Kent Tamura

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::paintPagesWithBoundaries): Added transforms invert the CG Bitmap so the coord system
matches that for Skia.

LayoutTests:

Added CG specific expected results.

Patch by Stephen Chenney <schenney@chromium.org> on 2011-11-02
Reviewed by Kent Tamura

* platform/chromium-cg-mac/printing/setPrinting-expected.png: Added.
* platform/chromium-cg-mac/printing/setPrinting-expected.txt: Added.
* platform/chromium-cg-mac/printing/single-line-must-not-be-split-into-two-pages-expected.png: Added.
* platform/chromium-cg-mac/printing/single-line-must-not-be-split-into-two-pages-expected.txt: Added.
* platform/chromium/test_expectations.txt: Removed expectation of failure.

Canonical link: https://commits.webkit.org/87659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99066 268f45cc-cd09-0410-ab3c-d52691b4dbfc